# sfm-mvs-base

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
