[project]
name = "sfm-mvs-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
]
